infra/app-2-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-2-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app-2
  template:
    metadata:
      labels:
        app: node-app-2
    spec:
      containers:
        - name: node-app-2
          image: k8s-node-app-2/1.0.0
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: node-app-2-clusterip-srv
spec:
  selector:
    app: node-app-2
  ports:
    - name: node-app-2
      protocol: TCP
      port: 4002
      targetPort: 4002
