infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: k8s.dev
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: node-app-1-clusterip-srv
                port:
                  number: 4001
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: node-app-2-clusterip-srv
                port:
                  number: 4002
